--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,55 @@
 ---
-import "../scss/main.scss";
+import AppLayout from "../layouts/app.astro";
+import Navbar from "../components/navbar/index.astro";
+import MobileNavbar from "../components/mobile-navbar/index.astro";
 ---
 
-<html lang="en" data-bs-theme="dark">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-  </body>
-</html>
+<AppLayout>
+  <Navbar />
+  <MobileNavbar />
+</AppLayout>
+
+<script>
+  (() => {
+    "use strict";
+
+    const prefersDarkMedia = "(prefers-color-scheme: dark)";
+    const dark = "dark";
+    const light = "light";
+
+    const storeKey = "theme";
+    const getStoredTheme = () => localStorage.getItem(storeKey);
+    window.setStoredTheme = (theme) => localStorage.setItem(storeKey, theme);
+
+    const getPreferredTheme = () => {
+      const storedTheme = getStoredTheme();
+      if (storedTheme) {
+        return storedTheme;
+      }
+
+      return window.matchMedia(prefersDarkMedia).matches ? dark : light;
+    };
+
+    const setTheme = (theme, doc = document) => {
+      const attr = "data-bs-theme";
+      if (theme === "auto" && window.matchMedia(prefersDarkMedia).matches) {
+        doc.documentElement.setAttribute(attr, dark);
+      } else {
+        doc.documentElement.setAttribute(attr, theme);
+      }
+    };
+
+    setTheme(getPreferredTheme());
+
+    window.matchMedia(prefersDarkMedia).addEventListener("change", () => {
+      const storedTheme = getStoredTheme();
+      if (storedTheme !== light && storedTheme !== dark) {
+        setTheme(getPreferredTheme());
+      }
+    });
+
+    document.addEventListener("astro:before-swap", (ev) => {
+      setTheme(getPreferredTheme(), ev.newDocument);
+    });
+  })();
+</script>
