--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,18 +1,8 @@
-@import "../../node_modules/bootstrap/scss/functions";
-
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/variables-dark";
-
-@import "../../node_modules/bootstrap/scss/maps";
-@import "../../node_modules/bootstrap/scss/mixins";
-@import "../../node_modules/bootstrap/scss/utilities";
-
-@import "../../node_modules/bootstrap/scss/root";
+@import "./bootstrap-base";
 
 html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
 
-@import "../../node_modules/bootstrap/scss/reboot";
-@import "../../node_modules/bootstrap/scss/type";
+@import "./bootstrap-components";
