--- a/src/layouts/app.astro
+++ b/src/layouts/app.astro
@@ -1,9 +1,11 @@
 ---
+import ThemeScript from "../components/theme-script.astro";
 import "../scss/main.scss";
 ---
 
 <html lang="en" data-bs-theme="auto">
   <head>
+    <ThemeScript />
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
