removing bootstrap in favour of pure scss

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,15 @@
 ---
 import AppLayout from "../layouts/app.astro";
-import Navbar from "../components/navbar/index.astro";
-import MobileNavbar from "../components/mobile-navbar/index.astro";
 ---
 
 <AppLayout>
-  <Navbar />
-  <MobileNavbar />
+  <div>
+    <h1>Order Thai</h1>
+  </div>
 </AppLayout>
+
+<style lang="scss">
+  div {
+    padding: 0 1rem;
+  }
+</style>
