--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,3 @@
-@import "./bootstrap-base";
-
-html {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-}
-
-@import "./bootstrap-components";
+@import "./reset";
+@import "./root";
+@import "./global";
