removing webkit tap highlight

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -10,4 +10,5 @@ body {
   max-width: 720px;
   margin: 0 auto;
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  -webkit-tap-highlight-color: transparent;
 }
