bootstrap is back :D I'm gonna need to clean this history

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,41 +1,83 @@
 ---
+import Icon from "./icon.astro";
+import { useTranslations } from "../i18n/utils";
 
+const t = useTranslations(Astro.currentLocale);
 ---
 
-<nav>
-  <slot />
-</nav>
+<div
+  class="container-fluid fixed-bottom position-sm-static border-top border-sm-0 shadow shadow-sm-none"
+>
+  <nav class="nav nav-pills py-3 py-sm-2">
+    <a
+      class="nav-link active d-inline-flex flex-sm-column align-items-sm-center"
+      aria-current="page"
+      href="#"
+    >
+      <Icon symbol="restaurant-menu" width="24" height="24" class="mb-sm-1" />
+      <span class="mx-1">{t("navbar.nav-link.eat")}</span>
+    </a>
+    <a
+      class="nav-link ms-2 d-inline-flex flex-sm-column align-items-sm-center"
+      href="#"
+    >
+      <Icon symbol="translate" width="24" height="24" class="mb-sm-1" />
+      <span class="d-none d-sm-inline">{t("navbar.nav-link.phrases")}</span>
+    </a>
+    <a
+      class="nav-link mx-2 d-inline-flex flex-sm-column align-items-sm-center"
+      href="#"
+    >
+      <Icon symbol="bookmarks" width="24" height="24" class="mb-sm-1" />
+      <span class="d-none d-sm-inline">{t("navbar.nav-link.saved")}</span></a
+    >
+    <a
+      class="nav-link ms-auto d-inline-flex flex-sm-column align-items-sm-center link-secondary"
+      href="#"
+    >
+      <Icon
+        symbol="three-dots"
+        width="24"
+        height="24"
+        class="d-none d-sm-inline mb-1"
+      />
+      <Icon symbol="list" width="24" height="24" class="d-sm-none" />
+      <span class="d-none d-sm-inline">{t("navbar.nav-link.more")}</span></a
+    >
+  </nav>
+</div>
 
 <style lang="scss">
-  @import "../scss/variables";
+  @import "../scss/bootstrap-base";
 
-  nav {
-    --navbar-border-color: #{$color-gray-200};
-
-    border-top: 1px solid var(--navbar-border-color);
-
-    position: fixed;
-    display: flex;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    padding: 0.5rem 1rem;
+  .nav-pills {
+    --bs-nav-pills-border-radius: var(--bs-border-radius-pill);
+    --bs-nav-pills-link-active-color: var(--bs-primary-text-emphasis);
+    --bs-nav-pills-link-active-bg: var(--bs-primary-bg-subtle);
   }
 
-  @media (min-width: 576px) {
-    nav {
-      position: unset;
-      border-top: unset;
+  .nav-link {
+    --bs-nav-link-color: var(--bs-secondary-color);
+  }
 
-      justify-content: space-evenly;
-      padding: 0.5rem 0.75rem;
+  @include media-breakpoint-up(sm) {
+    .nav {
+      --bs-nav-link-padding-x: 1rem;
+      --bs-nav-link-padding-y: 0.75rem;
+    }
+
+    .nav-pills {
+      --bs-nav-pills-border-radius: var(--bs-border-radius-xl);
+    }
+
+    .nav-link {
+      min-width: 7rem;
     }
   }
 
-  @media (prefers-color-scheme: dark) {
-    nav {
-      --navbar-border-color: #{$color-gray-800};
+  @include color-mode(dark) {
+    .nav-pills {
+      --bs-nav-pills-link-active-bg: var(--bs-tertiary-bg);
     }
   }
 </style>
