--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -32,7 +32,7 @@ const t = useTranslations(Astro.currentLocale);
       <span class="d-none d-sm-inline">{t("navbar.nav-link.saved")}</span></a
     >
     <a
-      class="nav-link ms-auto d-inline-flex flex-sm-column align-items-sm-center link-secondary"
+      class="nav-link ms-auto d-inline-flex flex-sm-column align-items-sm-center link-body-secondary"
       href="#"
     >
       <Icon
@@ -53,11 +53,22 @@ const t = useTranslations(Astro.currentLocale);
   .nav-pills {
     --bs-nav-pills-border-radius: var(--bs-border-radius-pill);
     --bs-nav-pills-link-active-color: var(--bs-primary-text-emphasis);
-    --bs-nav-pills-link-active-bg: var(--bs-primary-bg-subtle);
+    --bs-nav-pills-link-active-bg: #{tint-color($primary-bg-subtle, 60)};
+    --bs-nav-pills-link-hover-bg: #{tint-color($primary-bg-subtle, 60)};
   }
 
   .nav-link {
     --bs-nav-link-color: var(--bs-secondary-color);
+    --bs-nav-link-hover-color: ;
+
+    &:hover {
+      background-color: var(--bs-nav-pills-link-hover-bg);
+    }
+
+    &:active {
+      background-color: #{tint-color($primary-bg-subtle, 40)};
+      color: var(--bs-nav-pills-link-active-color);
+    }
   }
 
   @include media-breakpoint-up(sm) {
@@ -75,9 +86,19 @@ const t = useTranslations(Astro.currentLocale);
     }
   }
 
-  @include color-mode(dark) {
+  @include local-color-mode(dark) {
     .nav-pills {
       --bs-nav-pills-link-active-bg: var(--bs-tertiary-bg);
+      --bs-nav-pills-link-hover-bg: var(--bs-nav-pills-link-active-bg);
+    }
+
+    .nav-link {
+      --bs-nav-link-hover-color: var(--bs-nav-link-color);
+
+      &:active {
+        background-color: #{tint-color($body-tertiary-bg-dark, 5)};
+        color: var(--bs-secondary-color);
+      }
     }
   }
 </style>
