--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -15,21 +15,21 @@ const t = useTranslations(Astro.currentLocale);
       href="#"
     >
       <Icon symbol="restaurant-menu" width="24" height="24" class="mb-sm-1" />
-      <span class="mx-1">{t("navbar.nav-link.eat")}</span>
+      <span class="mx-1">{t("Eat")}</span>
     </a>
     <a
       class="nav-link ms-2 d-inline-flex flex-sm-column align-items-sm-center"
       href="#"
     >
       <Icon symbol="translate" width="24" height="24" class="mb-sm-1" />
-      <span class="d-none d-sm-inline">{t("navbar.nav-link.phrases")}</span>
+      <span class="d-none d-sm-inline">{t("Phrases")}</span>
     </a>
     <a
       class="nav-link mx-2 d-inline-flex flex-sm-column align-items-sm-center"
       href="#"
     >
       <Icon symbol="bookmarks" width="24" height="24" class="mb-sm-1" />
-      <span class="d-none d-sm-inline">{t("navbar.nav-link.saved")}</span></a
+      <span class="d-none d-sm-inline">{t("Saved")}</span></a
     >
     <a
       class="nav-link ms-auto d-inline-flex flex-sm-column align-items-sm-center link-body-secondary"
@@ -42,7 +42,7 @@ const t = useTranslations(Astro.currentLocale);
         class="d-none d-sm-inline mb-1"
       />
       <Icon symbol="list" width="24" height="24" class="d-sm-none" />
-      <span class="d-none d-sm-inline">{t("navbar.nav-link.more")}</span></a
+      <span class="d-none d-sm-inline">{t("More")}</span></a
     >
   </nav>
 </div>
