--- a/src/pages/_layout.astro
+++ b/src/pages/_layout.astro
@@ -15,7 +15,7 @@ import Icons from "../components/icons.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Sawadee Kha &mdash; Order Thai</title>
   </head>
-  <body>
+  <body class="pt-4 pt-sm-0">
     <slot />
     <Icons />
   </body>
