--- a/src/pages/_layout.astro
+++ b/src/pages/_layout.astro
@@ -2,9 +2,10 @@
 import stylesUrl from "../scss/main.scss?url";
 import ThemeScript from "../components/theme-script.astro";
 import Icons from "../components/icons.astro";
+import { defaultLocale } from "../i18n/config";
 ---
 
-<html lang="en">
+<html lang={Astro.currentLocale ?? defaultLocale}>
   <head>
     <link rel="preload" href={stylesUrl} as="style" />
     <link rel="stylesheet" href={stylesUrl} />
@@ -14,9 +15,12 @@ import Icons from "../components/icons.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Sawadee Kha &mdash; Order Thai</title>
+    <slot name="head" />
   </head>
   <body class="pt-4 pt-sm-0">
-    <slot />
+    <main style="margin-bottom: 9rem">
+      <slot />
+    </main>
     <Icons />
   </body>
 </html>
