--- a/src/components/category-card.astro
+++ b/src/components/category-card.astro
@@ -2,6 +2,8 @@
 import { type CollectionEntry, getEntry } from "astro:content";
 import { Image } from "astro:assets";
 import { useTranslation } from "../i18n/utils";
+import { getRelativeLocaleUrl } from "astro:i18n";
+import { defaultLocale } from "../i18n/config";
 
 interface Props {
   category: CollectionEntry<"category">;
@@ -10,6 +12,11 @@ interface Props {
 const { category } = Astro.props;
 const trans = await getEntry(category.data.translation);
 const t = useTranslation(trans, Astro.currentLocale);
+
+const href = getRelativeLocaleUrl(
+  Astro.currentLocale ?? defaultLocale,
+  `eat/${category.slug}`,
+);
 ---
 
 <div class="card border-0">
@@ -24,7 +31,7 @@ const t = useTranslation(trans, Astro.currentLocale);
   <div class="card-body px-0">
     <h5 class="h6 card-title text-center text-body-emphasis">
       <a
-        href="#"
+        href={href}
         title={t.title}
         class="stretched-link text-decoration-none link-body-emphasis"
       >
@@ -47,17 +54,17 @@ const t = useTranslation(trans, Astro.currentLocale);
   }
 
   .stretched-link:after {
-    --category-card-box-shadow-color: var(--bs-light);
+    --dish-card-box-shadow-color: var(--bs-light);
     border-radius: var(--bs-border-radius-xxl);
-    box-shadow: 0 0 0 #{map-get($border-widths, 4)} var(--category-card-box-shadow-color);
+    box-shadow: 0 0 0 #{map-get($border-widths, 4)} var(--dish-card-box-shadow-color);
   }
 
   .stretched-link:hover:after {
-    --category-card-box-shadow-color: var(--bs-primary-border-subtle);
+    --dish-card-box-shadow-color: var(--bs-primary-border-subtle);
   }
 
   .stretched-link:active:after {
-    --category-card-box-shadow-color: var(--bs-link-hover-color);
+    --dish-card-box-shadow-color: var(--bs-link-hover-color);
   }
 
   @include local-color-mode(dark) {
@@ -67,7 +74,7 @@ const t = useTranslation(trans, Astro.currentLocale);
     }
 
     .stretched-link:not(:active):not(:hover):after {
-      --category-card-box-shadow-color: var(--bs-tertiary-bg);
+      --dish-card-box-shadow-color: var(--bs-tertiary-bg);
     }
   }
 </style>
