--- a/src/pages/[locale]/eat/_eat.astro
+++ b/src/pages/[locale]/eat/_eat.astro
@@ -16,8 +16,7 @@ const linkHref = getRelativeLocaleUrl(
   <Fragment slot="head">
     <link href={linkHref} rel="canonical" />
   </Fragment>
-
   <Navbar />
-  <PageHeading id="lets-eat" />
+  <PageHeading id="page-heading/lets-eat" />
   <CategoryList />
 </Layout>
