--- a/src/scss/_bootstrap-base.scss
+++ b/src/scss/_bootstrap-base.scss
@@ -1,6 +1,8 @@
 @use "sass:map";
 @import "../../node_modules/bootstrap/scss/functions";
 
+$enable-negative-margins: true;
+
 $red: #ff382e;
 $orange: #ff9500;
 $yellow: #ffcc00;
