--- a/src/components/dish-card.astro
+++ b/src/components/dish-card.astro
@@ -12,8 +12,6 @@ interface Props {
 const { currentLocale = defaultLocale } = Astro;
 const { dish } = Astro.props;
 
-console.log(dish.data.spice);
-
 const trans = await getEntry(dish.data.translation);
 const t = useTranslation(trans, currentLocale);
 ---
@@ -21,7 +19,7 @@ const t = useTranslation(trans, currentLocale);
 <div class="card border-0 mb-4 mb-sm-0">
   <div class="hstack p-1 pb-0" style="column-gap: 1px;">
     {
-      dish.data.covers.map((src, i) => (
+      dish.data.covers?.map((src, i) => (
         <div class="ratio ratio-1x1">
           <Image
             src={src}
